# vip-ipykernel

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  vip_ipykernel_launcher.py
.github/: CODEOWNERS
.github/dependabot/: constraints.txt
.github/workflows/: python-publish.yml  test.yml  tests.yml
src/: vip_ipykernel_launcher.py
src/vip_ipykernel/: __init__.py  kernelspec.py  vip_ipykernel_launcher.py
tests/: notebook-std.ipynb  notebook-vip.ipynb  test_kernelspec_install.py  test_nb.py  test_venv_search.py  test_vip_ipykernel.py
